# sac

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  INSTALL  INSTALL.md  LICENSE  Makefile.am  README.md  followTheRules.editorconfig  sac.cproj
android/: AndroidNativeTouchState.cpp  AndroidNativeTouchState.h  sacjnilib.cpp  sacjnilib.h
android/SacChartboost/: .project  AndroidManifest.xml  build.xml
android/SacFramework/: .project  AndroidManifest.xml  build.xml
android/SacGooglePlayGameServices/: .project  AndroidManifest.xml  build.xml  project.properties
android/SacGooglePlayInAppBilling/: .project  AndroidManifest.xml  build.xml  project.properties
android/SacRevmob/: .classpath  .project  AndroidManifest.xml  build.xml
api/: AdAPI.h  AssetAPI.h  CommunicationAPI.h  ExitAPI.h  GameCenterAPI.h  InAppPurchaseAPI.h  JoystickAPI.h  KeyboardInputHandlerAPI.h  LocalizeAPI.h  MusicAPI.h  NameInputAPI.h  NetworkAPI.h  OpenURLAPI.h  SoundAPI.h  StorageAPI.cpp  StorageAPI.h  StringInputAPI.h  SuccessAPI.h  VibrateAPI.h  WWWAPI.h
api/android/: AdAPIAndroidImpl.cpp  AdAPIAndroidImpl.h  AssetAPIAndroidImpl.cpp  AssetAPIAndroidImpl.h  CommunicationAPIAndroidImpl.cpp  CommunicationAPIAndroidImpl.h  ExitAPIAndroidImpl.cpp  ExitAPIAndroidImpl.h  GameCenterAPIAndroidImpl.cpp  GameCenterAPIAndroidImpl.h  InAppPurchaseAPIAndroidImpl.cpp  InAppPurchaseAPIAndroidImpl.h  JNIWrapper.cpp  JNIWrapper.h  LocalizeAPIAndroidImpl.cpp  LocalizeAPIAndroidImpl.h  MusicAPIAndroidImpl.cpp  MusicAPIAndroidImpl.h  NameInputAPIAndroidImpl.cpp  NameInputAPIAndroidImpl.h  OpenURLAPIAndroidImpl.cpp  OpenURLAPIAndroidImpl.h  SoundAPIAndroidImpl.cpp  SoundAPIAndroidImpl.h  StorageAPIAndroidImpl.cpp  StorageAPIAndroidImpl.h  StringInputAPIAndroidImpl.cpp  StringInputAPIAndroidImpl.h  SuccessAPIAndroidImpl.cpp  SuccessAPIAndroidImpl.h  VibrateAPIAndroidImpl.cpp  VibrateAPIAndroidImpl.h  WWWAPIAndroidImpl.cpp  WWWAPIAndroidImpl.h
api/default/: AdAPIDebugImpl.h  GameCenterAPIDebugImpl.cpp  GameCenterAPIDebugImpl.h  InAppPurchaseAPIDebugImpl.h  KeyboardInputHandlerAPIGLFWImpl.cpp  KeyboardInputHandlerAPIGLFWImpl.h  KeyboardInputHandlerAPISDLImpl.cpp  KeyboardInputHandlerAPISDLImpl.h  LocalizeAPITextImpl.cpp  LocalizeAPITextImpl.h  SqliteStorageAPIImpl.cpp  SqliteStorageAPIImpl.h  WWWAPIcURLImpl.cpp  WWWAPIcURLImpl.h
api/ios/: IOSTouchState.cpp  IOSTouchState.h
api/linux/: AssetAPILinuxImpl.cpp  AssetAPILinuxImpl.h  CommunicationAPILinuxImpl.h  ExitAPILinuxImpl.cpp  ExitAPILinuxImpl.h  GameCenterAPIDebugImpl.cpp  GameCenterAPIDebugImpl.h  KeyboardInputHandlerAPISDLImpl.cpp  KeyboardInputHandlerAPISDLImpl.h  LocalizeAPILinuxImpl.cpp  LocalizeAPILinuxImpl.h  MusicAPILinuxOpenALImpl.cpp  MusicAPILinuxOpenALImpl.h  NameInputAPILinuxImpl.cpp  NameInputAPILinuxImpl.h  NetworkAPILinuxImpl.cpp  NetworkAPILinuxImpl.h  NetworkAPILinuxPacket.cpp  NetworkAPILinuxPacket.h  OpenURLAPILinuxImpl.cpp  OpenURLAPILinuxImpl.h  SoundAPILinuxOpenALImpl.cpp  SoundAPILinuxOpenALImpl.h  StorageAPILinuxImpl.cpp  StorageAPILinuxImpl.h  StringInputAPISDLImpl.cpp  StringInputAPISDLImpl.h  VibrateAPILinuxImpl.cpp  VibrateAPILinuxImpl.h  WWWAPIcURLImpl.cpp  WWWAPIcURLImpl.h
api/sdl/: JoystickAPISDLImpl.h  (+3 more)
app/: AppSetup.cpp  AppSetup.h  AppSetupIOS.cpp  AppSetupSDL.cpp  MouseNativeTouchState.cpp  MouseNativeTouchState.h
base/: Assert.h  CircularBuffer.cpp  CircularBuffer.h  Color.cpp  Color.h  Common.cpp  Common.h  Entity.h  EntityDef.h  EntityManager.cpp  EntityManager.h  Frequency.h  Game.cpp  Game.h  GameContext.h  GameContext.hpp  Interval.h  JoystickManager.cpp  JoystickManager.h  Log.cpp  Log.h  MathUtil.cpp  MathUtil.h  NamedAssetLibrary.cpp  NamedAssetLibrary.h  ObjectSerializer.h  PlacementHelper.cpp  PlacementHelper.h  Profiler.cpp  Profiler.h  SacDefs.h  SacGitVersion.h  SceneState.h  SqlExporter.cpp  SqlExporter.h  StateMachine.cpp  StateMachine.h  StateMachine.inl  TimeUtil.cpp  TimeUtil.h  (+6 more)
cmake/: utilities.cmake
doc/: conf  sac.doxygen
libs/: convert_tremor_asm.sh
steering/: BasicSteeringBehavior.cpp  SimpleBehavior.h  SimpleBehavior.inl  SteeringBehavior.cpp  SteeringBehavior.h
systems/: ADSRSystem.cpp  ADSRSystem.h  AnchorSystem.cpp  AnchorSystem.h  AnimationSystem.cpp  AnimationSystem.h  AutoDestroySystem.cpp  AutoDestroySystem.h  AutonomousAgentSystem.cpp  AutonomousAgentSystem.h  BackInTimeSystem.cpp  BackInTimeSystem.h  BlinkSystem.cpp  BlinkSystem.h  ButtonSystem.cpp  ButtonSystem.h  CameraDepSystem.cpp  CameraDepSystem.h  CameraSystem.cpp  CameraSystem.h  CameraTargetSystem.cpp  CameraTargetSystem.h  CollisionSystem.cpp  CollisionSystem.h  ContainerSystem.cpp  ContainerSystem.h  DebugRenderingManager.cpp  DebugRenderingManager.h  DebuggingSystem.cpp  DebuggingSystem.h  GraphSystem.cpp  GraphSystem.h  GridSystem.cpp  GridSystem.h  HUDManager.cpp  HUDManager.h  HierarchySystem.cpp  HierarchySystem.h  MorphingSystem.cpp  MorphingSystem.h  (+42 more)
tests/: tests.cpp  tests_utils.h
tools/: android_build.sh  coolStuff.sh  cool_stuff.sh  does_TTFfont_contain_this_character.sh  extract_xcf_layers.py  font_desc_generator.sh  generate_Zorder_linestack.sh  generate_alphabet_font_descriptor.sh  generate_alphabet_sprites.sh  generate_atlas.sh  generate_header.sh  generate_state_machine.sh  release.sh  renameProject.sh  rename_project.sh  store_alpha_in_rgb.py  update_transifex_localized_files.sh  xmlLanguageFromTable.sh  xxd_python.py
util/: ComponentFactory.cpp  ComponentFactory.h  DataFileParser.cpp  DataFileParser.h  DebugConsole.cpp  DebugConsole.h  Draw.cpp  Draw.h  DrawSomething.cpp  DrawSomething.h  EntityBatch.cpp  EntityBatch.h  EntryPoint.cpp  FaderHelper.cpp  FaderHelper.h  FileBufferHelper.cpp  FileBufferHelper.h  GameCenterAPIHelper.cpp  GameCenterAPIHelper.h  HexSpatialGrid.cpp  HexSpatialGrid.h  ImageLoader.cpp  ImageLoader.h  IntersectionUtil.cpp  IntersectionUtil.h  LevelEditor.cpp  LevelEditor.h  Misc.cpp  Misc.h  MurmurHash.cpp  MurmurHash.h  OggDecoder.cpp  OggDecoder.h  Random.cpp  Random.h  Recorder.cpp  Recorder.h  ReplayManager.cpp  ReplayManager.h  ResourceHotReload.cpp  (+18 more)
(+172 files in other folders)
